--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.1",
+    "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.0.0",
